# HalluShield

./: .gitignore  LICENSE  README.md  ROADMAP.md  index.html  pyproject.toml
benchmarks/: __init__.py  ablation.py  hallushield_med.py  ragtruth_eval.py  span_eval.py
dashboard/: app.py
hallushield/: __init__.py  config.py  firewall.py  pipeline.py
hallushield/core/: __init__.py  fusion.py  sentences.py  text.py  types.py
hallushield/decision/: __init__.py  engine.py  self_healing.py
hallushield/generation/: __init__.py  litellm_gen.py  stub.py
hallushield/middleware/: __init__.py  app.py  schemas.py
hallushield/retrieval/: __init__.py  faiss_store.py  memory.py
hallushield/signals/: __init__.py  grounding.py  lexical.py  logic_judge.py
hallushield/upstream/: __init__.py  inter_chunk.py  shield.py  source_credibility.py
tests/: test_ablation.py  test_api.py  test_decision.py  test_eval.py  test_firewall.py  test_fusion.py  test_grounding.py  test_hallushield_med.py  test_logic_judge.py  test_metrics.py  test_pipeline.py  test_query_threading.py  test_registry.py  test_retrieval.py  test_sampling.py  test_self_healing.py  test_sentences.py  test_signals.py  test_span_eval.py  test_text.py  test_types.py  test_upstream.py
