[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hallushield"
version = "0.1.0"
description = "Real-time hallucination firewall for RAG systems (final-year project)"
requires-python = ">=3.11"
dependencies = []

# Heavy/optional deps are grouped so Phase 0 stays installable with no ML stack.
# Install per phase, e.g.  pip install -e ".[dev]"  then later  pip install -e ".[ml,api]"
[project.optional-dependencies]
dev = ["pytest>=8"]
ml = [
    "lettucedetect",          # core grounding scorer (Phase 1)
    "sentence-transformers",  # embeddings + cross-encoder NLI (Phase 1/3)
    "faiss-cpu",              # vector store (Phase 1)
    "spacy>=3.7",             # sentence segmentation (Phase 1)
]
api = ["fastapi", "uvicorn[standard]", "litellm"]   # middleware + provider-agnostic LLM (Phase 1/2)
eval = ["ragas>=0.2", "datasets"]                    # baselines + dataset loading (Phase 2)
demo = ["streamlit", "pandas"]                        # dashboard (Phase 5)

[tool.setuptools.packages.find]
include = ["hallushield*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
